--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "bootstrap-icons": "^1.8.2",
     "dotenv": "^16.0.1",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
