--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.0-beta1",
     "bootstrap-icons": "^1.8.2",
     "dotenv": "^16.0.1",
+    "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
